--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 30px;
+    margin: 20px 30px;
     background-color: var(--Light-gray);
 }
 
